bundestag.io/api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bundestag-io-api
  name: bundestag-io-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4000
  selector:
    app: bundestag-io-api
